--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -464,7 +464,7 @@
 
         .product-of-the-day {
             margin-top: 20px;
-            margin-left: 10%;
+            margin-left: 8%;
         }
 
         .filters {
@@ -474,8 +474,9 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 400px; /* Регулируйте ширину по своему усмотрению */
-            height: 450px;
+            height: 490px;
             margin-right: 40px;
+            text-align: center;
         }
 
         /* Заголовок "Filters" */
@@ -488,7 +489,7 @@
         /* Стили для инпутов и лейблов */
         .filters label {
             display: block;
-            font-size: 14px;
+            font-size: 16px;
             color: #ffffff;
             margin-top: 10px;
         }
@@ -504,10 +505,32 @@
             background-color: #a0d1fd;
         }
 
+        .filters .sort-buttons button {
+            background-color: #062a6f; /* Цвет фона кнопки */
+            color: #fff; /* Цвет текста кнопки */
+            padding: 10px 15px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-top: 10px;
+        }
+
 
         /* Стили для кнопок */
         .filters input[type="submit"] {
             background-color: #062a6f; /* Цвет фона кнопки */
+            color: #fff; /* Цвет текста кнопки */
+            padding: 10px 15px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-top: 10px;
+        }
+
+        .filters .apply-button input{
+            background-color: #00c3ac; /* Цвет фона кнопки */
             color: #fff; /* Цвет текста кнопки */
             padding: 10px 15px;
             border: none;
@@ -548,7 +571,7 @@
             border-radius: 8px;
             cursor: pointer;
             font-size: 14px;
-            margin-top: 20px;
+            margin-top: 10px;
         }
         .reset-button:hover {
             background-color: #e64827; /* Измените цвет фона при наведении на кнопку */
@@ -833,7 +856,7 @@
             <input type="text" id="searchInput" placeholder="Search by name..." />
             <button onclick="searchProducts()">Search</button>
         </div>
-        <form th:action="@{/shop/filter}" th:object="${filters}" method="get">
+        <form th:action="@{/shop/filter}" th:object="${filters}" method="get" id="filterForm">
             <label for="minPrice">Min Price:</label>
             <input type="number" id="minPrice" th:field="*{minPrice}" />
             <label for="maxPrice">Max Price:</label>
@@ -845,7 +868,15 @@
                     <option th:value="${category.id}" th:text="${category.name}"></option>
                 </th:block>
             </select>
-            <input type="submit" value="Apply Filters" />
+            <div class="sort-buttons">
+                <button type="button" onclick="setSortOrderAndSubmit('')">Default</button>
+                <button type="button" onclick="setSortOrderAndSubmit('asc')">Low to High</button>
+                <button type="button" onclick="setSortOrderAndSubmit('desc')">High to Low</button>
+                <input type="hidden" id="sortOrder" name="sortOrder" th:field="*{sortOrder}" />
+                <div class="apply-button">
+                    <input type="submit" class="apply-button" value="Apply Filters" />
+                </div>
+            </div>
         </form>
         <form th:action="@{/shop}" method="get">
             <button type="submit" class="reset-button">Reset</button>
@@ -933,6 +964,10 @@
                 card.style.display = "none";
             }
         })
+    }
+    function setSortOrderAndSubmit(order) {
+        document.getElementById('sortOrder').value = order;
+        document.getElementById('filterForm').submit();
     }
 </script>
 </body>
