--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -3,158 +3,145 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-
-    <title>Document</title>
+    <title>Product Card UI Design</title>
+    <link rel="stylesheet" type="text/css" href="/css/checkout.css">
+    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>View</title>
 </head>
 <body>
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img th:src="@{/images/logo.png}"  src="../static/images/logo.png" width="auto" height="40" class="d-inline-block align-top" alt=""/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto"></ul>
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a>
-                </li>
-                <li class="nav-item active">
-                    <form th:action="@{/logout}" method="post">
-                        <input type="submit" value="Logout" />
-                    </form>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
-                </li>
-                <li class="nav-item active">
-                    <span class="nav-link" th:text="${cartCount}">0</span>
+<div class="sidebar close">
+    <div class="logo-details">
+        <i class='bx bxl-java' ></i>
+        <span class="logo_name">ITech</span>
+    </div>
+    <ul class="nav-links">
+        <li>
+            <a href="#">
+                <i class='bx bx-menu'></i>
+                <span class="link_name">Menu</span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" href="#">Menu</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" th:href="@{/}">
+                <i class='bx bx-grid-alt' ></i>
+                <span class="link_name">Home</span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" th:href="@{/}">Home</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="iocn-link">
+                <a href="#">
+                    <i class='bx bx-collection' ></i>
+                    <span class="link_name">Category</span>
+                </a>
+                <i class='bx bxs-chevron-down arrow' ></i>
+            </div>
+            <ul class="sub-menu">
+                <li><a class="link_name" href="#">Category</a></li>
+                <li th:each="category : ${categories}">
+                    <a th:text="${category.name}" href="#" th:href="@{'/shop/category/' + ${category.id}}"></a>
                 </li>
             </ul>
+        </li>
+        <li>
+            <a href="#" th:href="@{/shop}">
+                <i class='bx bx-laptop' ></i>
+                <span class="link_name">Products</span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" th:href="@{/shop}" href="#" >Products</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" th:href="@{/cart}">
+                <i class='bx bx-cart-alt'></i>
+                <span class="link_name">Cart <span class="cart-count" th:text="${cartCount}"></span></span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" th:href="@{/cart}" href="#">Cart</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" th:href="@{/logout}" th:action="@{/logout}" th:method="post">
+                <i class='bx bx-log-out' style="color: rgb(255, 0, 0);"></i>
+                <span class="link_name logout-link" style="color: rgb(255, 0, 0);">LogIn/Out</span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" href="#" th:href="@{/logout}" th:action="@{/logout}" th:method="post">LogIn/Out</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
 
-        </div>
-    </div>
-</nav>
-<div class="container">
-    <section class="mt-5 mb-4">
+<div class="wrapper">
+    <div class="container">
         <form th:object="${orderDTO}" method="post" th:action="@{/payNow}">
-            <div class="row">
-                <div class="col-lg-8 mb-4">
-                    <div class="card wish-list pb-1">
-                        <div class="card-body">
-                            <h5 class="mb-2">Billing details</h5>
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="md-form md-outline mb-0 mb-lg-4">
-                                        <label for="firstName">First name</label>
-                                        <input type="text" id="firstName" th:field="*{firstName}" required class="form-control mb-0 mb-lg-2">
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="md-form md-outline">
-                                        <label for="lastName">Last name</label>
-                                        <input type="text" id="lastName" th:field="*{lastName}" required class="form-control">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="d-flex flex-wrap">
-                                <div class="select-outline position-relative w-100">
-                                    <label>Country - <strong>Ukraine</strong></label>
-                                </div>
-                            </div>
-                            <div class="md-form md-outline mt-2">
-                                <label for="form14">Address (Line 1)</label>
-                                <input type="text" required id="form14" th:field="*{address1}" placeholder="House number and street name" class="form-control">
-                            </div>
-                            <div class="md-form md-outline mt-2">
-                                <label for="form15">Address (Line 2)</label>
-                                <input type="text" id="form15" th:field="*{address2}" placeholder="Apartment, suite, unit etc. (optional)" class="form-control">
-                            </div>
-                            <div class="md-form md-outline mt-3">
-                                <label for="form16">Postcode / ZIP</label>
-                                <input type="text" maxlength="6" th:field="*{postCode}" minlength="6" required id="form16" class="form-control">
-                            </div>
-                            <div class="md-form md-outline mt-2">
-                                <label for="form17">Town / City</label>
-                                <input type="text" required id="form17" th:field="*{city}" class="form-control">
-                            </div>
-                            <div class="md-form md-outline mt-2">
-                                <label for="form18">Phone</label>
-                                <input type="number" minlength="10" th:field="*{phone}" maxlength="10" required id="form18" class="form-control">
-                            </div>
-                            <div class="md-form md-outline mt-2">
-                                <label for="form19">Email address</label>
-                                <input type="email" id="form19" th:field="*{email}" required class="form-control">
-                            </div>
-                            <div class="md-form md-outline mt-2">
-                                <label for="form76">Additional information</label>
-                                <textarea id="form76" th:field="*{description}" class="md-textarea form-control" rows="4"></textarea>
-                            </div>
-                        </div>
-                    </div>
+            <h1>
+                <i class="fas fa-shipping-fast"></i>
+                Shipping Details
+            </h1>
+            <div class="name">
+                <div>
+                    <label for="firstName">First</label>
+                    <input type="text" th:field="*{firstName}" name="f-name" id="firstName" required>
                 </div>
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="mb-3">The total amount</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                    Amount Payable
-                                    <span>USD<span th:text="${total}"></span></span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                    Shipping
-                                    <span>Gratis</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                                    <div>
-                                        <strong>The total amount of</strong>
-                                        <strong>
-                                            <p class="mb-0">(including VAT)</p>
-                                        </strong>
-                                    </div>
-                                    <span><strong>USD<span th:text="${total}"></span></strong></span>
-                                </li>
-                            </ul>
-                            <button type="submit" class="btn btn-primary btn-block waves-effect waves-light">Pay Now</button>
-                        </div>
-                    </div>
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <a class="dark-grey-text d-flex justify-content-between" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                                Add a discount code (optional)
-                                <span><i class="fas fa-chevron-down pt-1"></i></span>
-                            </a>
-                            <div class="collapse" id="collapseExample">
-                                <div class="mt-3">
-                                    <div class="md-form md-outline mb-0">
-                                        <input type="text" id="discount-code" class="form-control font-weight-light" placeholder="Enter discount code">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div>
+                    <label for="lastName">Last</label>
+                    <input type="text" th:field="*{lastName}" name="l-name" id="lastName" required>
                 </div>
             </div>
+            <div class="street">
+                <label for="Address1">Address (Line 1)</label>
+                <input type="text" name="address" id="Address1" th:field="*{address1}" placeholder="House number and street name" required>
+                <label for="Address2">Address (Line 2)</label>
+                <input type="text" name="address" id="Address2" th:field="*{address2}" placeholder="Apartment, suite, unit etc. (optional)">
+            </div>
+            <div class="address-info">
+                <div>
+                    <label for="city">City</label>
+                    <input type="text" name="city" id="city" th:field="*{city}" required>
+                </div>
+                <div>
+                    <label for="state">State</label>
+                    <input type="text" name="state" id="state" placeholder="Ukraine" readonly>
+                </div>
+                <div>
+                    <label for="zip">Zip</label>
+                    <input type="text" name="zip" id="zip" th:field="*{postCode}" required>
+                </div>
+            </div>
+            <h1>
+                <i class='bx bx-phone-call'></i> Personal Information
+            </h1>
+            <div class="cc-num">
+                <label for="email">Email</label>
+                <input type="text" th:field="*{email}" name="card-num" id="email" required>
+            </div>
+            <div class="cc-info">
+                <div>
+                    <label for="phone">Phone</label>
+                    <input type="text" th:field="*{phone}" name="expire" id="phone" required>
+                </div>
+                <div>
+                    <label for="add-inform">Additional information</label>
+                    <input type="text" th:field="*{description}" name="security" id="add-inform" placeholder="Optional">
+                </div>
+            </div>
+            <div class="btns">
+                <button>Purchase</button>
+                <button type="button" onclick="goBackToCart()">Back to cart</button>
+            </div>
         </form>
-    </section>
+    </div>
 </div>
 
 
@@ -162,8 +149,23 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script>
+    let arrow = document.querySelectorAll(".arrow");
+    for (var i = 0; i < arrow.length; i++) {
+        arrow[i].addEventListener("click", (e)=>{
+            let arrowParent = e.target.parentElement.parentElement;//selecting main parent of arrow
+            arrowParent.classList.toggle("showMenu");
+        });
+    }
+    let sidebar = document.querySelector(".sidebar");
+    let sidebarBtn = document.querySelector(".bx-menu");
+    console.log(sidebarBtn);
+    sidebarBtn.addEventListener("click", ()=>{
+        sidebar.classList.toggle("close");
+    });
+    function goBackToCart() {
+        window.location.href = '/cart';
+    }
+</script>
 </body>
 </html>
