--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,6 +80,10 @@
         </ul>
     </div>
 
+    <div class="content">
+        <h1>Welcome to ITech</h1>
+        <a class="explore-btn" th:href="@{/shop}">Explore</a>
+    </div>
 
     <script>
         let arrow = document.querySelectorAll(".arrow");
