--- a/src/main/resources/static/css/categoryAdd.css
+++ b/src/main/resources/static/css/categoryAdd.css
@@ -44,7 +44,7 @@ label {
 }
 
 button {
-    background-color: #007bff;
+    background-color: #016675;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -53,5 +53,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #014b56;
 }
